[project]
name = "keybow-loader"
description = ""
author = "Jordan Guzak"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
version = "0.0.1"
requires-python = ">=3.8"

dependencies = [
	"click (*)"
]

[project.scripts]
keybow-loader = "keybow-loader"

[tool.poetry]